<resources>
    <string name="app_name">Boun Room Allocator</string>

    <!-- Login Activity -->
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wrongCredentials">Username or password is wrong.</string>

    <!-- SignUp Activity -->
    <string name="bounedutr">\@boun.edu.tr</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="facilitiesManager">Facilities Manager</string>
    <string name="chooseType">Select Profile Type</string>

    <!-- Manager Activity -->
    <string name="Welcome">Welcome!</string>
    <string name="addBuilding">Add\nBuilding</string>
    <string name="deleteBuilding">Delete\nBuilding</string>
    <string name="cancelDelete">Cancel\nDelete</string>
    <string name="addRoom">Add\nRoom</string>
    <string name="buildingName">Building Name:</string>
    <string name="roomName">Room Name:</string>
    <string name="roomCapacity">Room Capacity:</string>

    <!-- Teacher Activity -->
    <string name="addLecture">Add\nLecture</string>


</resources>
