<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.thetytoalba.bounroomallocator.SignUpActivity">
    <ImageView
        android:id="@+id/signUp_logo"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:src="@drawable/boun_logo"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"

        android:gravity="center"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/signUp_usernameEditText"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="9"
            android:textColor="@color/darkGray"
            android:text="@string/bounedutr"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <EditText
            android:id="@+id/signUp_passwordEditText"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/signUp_eyeIcon"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/visible"
            android:tint="@color/darkGray"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textColor="@color/darkGray"
        android:text="@string/chooseType"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center">
        <TextView
            android:id="@+id/signUp_student"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/midGray"
            android:textColor="@color/white"
            android:text="@string/student"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/signUp_teacher"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/midGray"
            android:textColor="@color/white"
            android:text="@string/teacher"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/signUp_manager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/midGray"
            android:textColor="@color/white"
            android:text="@string/facilitiesManager"/>
    </LinearLayout>
    <Button
        android:id="@+id/signUp_signUpButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="25dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/signup"/>

    <ProgressBar
        android:id="@+id/signUp_progressBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="25dp"
        android:background="@color/colorPrimary"
        android:visibility="gone"/>
</LinearLayout>
