<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.thetytoalba.bounroomallocator.LoginActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/boun_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:layout_below="@id/usernameEditText"/>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_below="@id/passwordEditText"
            android:layout_alignEnd="@id/passwordEditText"
            android:text="@string/login"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
</LinearLayout>
