<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:src="@drawable/boun_logo"
        android:padding="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Adding room to building "
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/roomName"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/addRoomActivity_RoomNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="30dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/roomCapacity"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/addRoomActivity_roomCapacityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:background="@color/colorAccent">
        <Button
            android:id="@+id/addRoomActivity_addRoomButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/addRoom"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        <ProgressBar
            android:id="@+id/addRoomActivity_progress"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:visibility="gone"/>
    </LinearLayout>
    <ImageView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
</LinearLayout>
